Added sessionDetailsViewController with rawDataViews for recorded values. Began writing code for user settings of recording options, and location recording mode

--- a/MuseStatsIos/MuseStatsIos/Info.plist
+++ b/MuseStatsIos/MuseStatsIos/Info.plist
@@ -29,6 +29,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Brainlog would like to log your location. This information will be kept private.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>external-accessory</string>
