display data in-app, select which data types to record, bug with long-press for selecting session

--- a/MuseStatsIos/MuseStatsIos/Info.plist
+++ b/MuseStatsIos/MuseStatsIos/Info.plist
@@ -29,11 +29,14 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Brainlog would like to log your location in the background. This information will be kept private.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Brainlog would like to log your location. This information will be kept private.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>external-accessory</string>
+		<string>fetch</string>
 		<string>location</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
